changes added limit to 500, 100 results per page
